# git-prune

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  setup.py
.circleci/: config.yml
git_prune/: main.py
git_prune_src/: main.py
tests/: conftest.py  test_git_prune.py
