[tool.poetry]
name = "git-prune"
version = "0.1.2"
description = "Clean up your local git branches to match the remote with one command."
authors = ["Richard Soper"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rsoper/git-prune"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
black = "^22.1.0"

[tool.poetry.scripts]
git-prune = 'git_prune.main:cli'

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
